--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,39 @@
 [config]
 # 账号 & 密码
-username = 123456@gmain.com
-password = 123456
+username = 账号
+password = 密码
 
+
+[download]
+m3u8_ts_path = /Volumes/WDC120G
+download_path = /Volumes/photo
+
+[spider]
+# 爬取数据量层数，默认爬取一层（当前登录用户下关联的数据）
+# 多层次爬虫,将以网状结构从各个节点爬取所有数据,默认为1,爬光网站数据请设置为0
+level = 1
+# 设置爬取入口
+# 第一个节点从登录账号正在关注开始。
+# 之后的节点入口,0为关注者,1为正在关注,2可能认识的人
+# level为1时本参数无效
+from = 1
+# 开启多线程爬取,数值为线程数,0为单线程
+thread = 3
+# 数据是否覆盖,True or False,默认为True
+over = False
+# 单次获取数量,最大为100,默认为20
+count = 100
+# 每当爬取完毕后 间隔spider_wait小时运行一次爬虫
+spider_wait = 2
 
 [request]
 # 默认useragent
-User_Agent = Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36
+User-Agent = Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36
 # VPN代理
 http = http://127.0.0.1:7890
 https = http://127.0.0.1:7890
-
 # retrying   ms
-retry_max_number = 1
+retry_max_number = 3
 retry_min_random_wait = 1000
 retry_max_random_wait = 5000
 # http
