--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,15 @@
 username = 账号
 password = 密码
 
+[email]
+# qq邮箱smtp服务器
+host_server = smtp.qq.com
+# 发件人邮箱
+sender_qq = 发件人邮箱
+# 发件人授权码
+pwd = 发件人授权码
+# 收件人邮箱
+receiver = 收件人邮箱
 
 [download]
 m3u8_ts_path = /Volumes/WDC120G
